tdf#122557 EMF+ Implement proper rotation support of DrawImage

Change-Id: I2c32a47fac06b2026d61a0f369e6d569c9f57502